; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_mesh.c_add_outline.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_mesh.c_add_outline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.outline = type { i32 }
%struct.outline_array = type { i64, %struct.outline* }
%struct.dynamic_array = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.outline* (%struct.outline_array*)* @add_outline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.outline* @add_outline(%struct.outline_array* %0) #0 {
  %2 = alloca %struct.outline*, align 8
  %3 = alloca %struct.outline_array*, align 8
  %4 = alloca %struct.outline*, align 8
  store %struct.outline_array* %0, %struct.outline_array** %3, align 8
  %5 = load %struct.outline_array*, %struct.outline_array** %3, align 8
  %6 = bitcast %struct.outline_array* %5 to %struct.dynamic_array*
  %7 = load %struct.outline_array*, %struct.outline_array** %3, align 8
  %8 = getelementptr inbounds %struct.outline_array, %struct.outline_array* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = add nsw i64 %9, 1
  %11 = call i32 @reserve(%struct.dynamic_array* %6, i64 %10, i32 4)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  store %struct.outline* null, %struct.outline** %2, align 8
  br label %26

14:                                               ; preds = %1
  %15 = load %struct.outline_array*, %struct.outline_array** %3, align 8
  %16 = getelementptr inbounds %struct.outline_array, %struct.outline_array* %15, i32 0, i32 1
  %17 = load %struct.outline*, %struct.outline** %16, align 8
  %18 = load %struct.outline_array*, %struct.outline_array** %3, align 8
  %19 = getelementptr inbounds %struct.outline_array, %struct.outline_array* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %20, 1
  store i64 %21, i64* %19, align 8
  %22 = getelementptr inbounds %struct.outline, %struct.outline* %17, i64 %20
  store %struct.outline* %22, %struct.outline** %4, align 8
  %23 = load %struct.outline*, %struct.outline** %4, align 8
  %24 = call i32 @ZeroMemory(%struct.outline* %23, i32 4)
  %25 = load %struct.outline*, %struct.outline** %4, align 8
  store %struct.outline* %25, %struct.outline** %2, align 8
  br label %26

26:                                               ; preds = %14, %13
  %27 = load %struct.outline*, %struct.outline** %2, align 8
  ret %struct.outline* %27
}

declare dso_local i32 @reserve(%struct.dynamic_array*, i64, i32) #1

declare dso_local i32 @ZeroMemory(%struct.outline*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
